# sha3x_cudaminer

./: Cargo.toml  README.md  build.rs
cuda/: sha3x_cuda.cu
src/: gpu.rs  main.rs  types.rs
